fixed alignment issue with gallery on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@ nav {
     transform: translate3d(0, 30%, 0); }
     .grid .item h4, .grid .grid-sizer h4 {
       font-size: 1em;
-      padding-bottom: 30px; }
+      padding-bottom: 50px; }
   .grid .item {
     float: left; }
 
@@ -133,12 +133,14 @@ footer {
     font-size: 2em !important; }
 
   .grid {
-    padding-top: 100px;
-    padding-bottom: 100px;
-    margin: 0 auto; }
+    margin: 0 auto;
+    padding: 100px 0px 100px 0px; }
     .grid .item, .grid .grid-sizer {
-      width: 290px; } }
+      width: 290px !important; } }
 @media (max-width: 820px) {
+  .header-img {
+    height: 500px; }
+
   footer {
     height: auto;
     padding: 50px;
@@ -151,7 +153,7 @@ footer {
       padding-left: 0;
       padding-top: 30px; }
     footer quote {
-      padding: 50px; }
+      padding: 10px; }
     footer hr {
       display: block; }
     footer #contact {
@@ -167,11 +169,8 @@ footer {
     .nav .menuitem a, .nav .icon a {
       color: white;
       transition: color 0.4s;
-      font-size: 1.4em; }
-
-  .container-fluid {
-    padding-top: 100px;
-    padding-bottom: 100px; }
+      font-size: 1.2em;
+      text-shadow: .5px .5px 1px #333; }
 
   nav {
     position: absolute; } }
@@ -183,21 +182,25 @@ footer {
     font-size: 0.9em; } }
 @media (min-width: 820px) and (max-width: 960px) {
   footer {
-    height: 440px; }
-    footer #contact {
-      padding-left: 120px; }
-    footer #about, footer #contact {
-      padding-top: 50px; }
-    footer #quote {
-      padding: 10px; } }
-@media (min-width: 960px) and (max-width: 1350px) {
-  footer {
-    height: 435px; }
+    height: 500px; }
     footer #contact {
       padding-left: 120px; }
     footer #about, footer #contact {
       padding-top: 70px; }
     footer #quote {
-      padding: 10px; } }
+      padding: 10px; }
+    footer #backarrow {
+      padding-top: 60px; } }
+@media (min-width: 960px) and (max-width: 1350px) {
+  footer {
+    height: 500px; }
+    footer #contact {
+      padding-left: 120px; }
+    footer #about, footer #contact {
+      padding-top: 70px; }
+    footer #quote {
+      padding: 10px; }
+    footer #backarrow {
+      padding-top: 60px; } }
 
 /*# sourceMappingURL=style.css.map */
