--- a/scss/layout/_sections.scss
+++ b/scss/layout/_sections.scss
@@ -17,7 +17,7 @@
 
 h4 {
 	font-size: 1em;
-	padding-bottom: 30px;
+	padding-bottom: 50px;
 }
 
 }
